WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
63943
Spelling error in v8WebSocket::constructorCallback error
https://bugs.webkit.org/show_bug.cgi?id=63943
Summary
Spelling error in v8WebSocket::constructorCallback error
Berend-Jan Wever
Reported
2011-07-05 09:08:29 PDT
Adam, I think you misspelled "constructor": WebKit/Source/WebCore/bindings/v8/custom/V8WebSocketCustom.cpp@53: return throwError("DOM object custructor cannot be called as a function."); Repro/test: <script> try { WebSocket() } catch(e) { document.write(e.message.indexOf('custructor') == -1 ? 'PASS' : 'FAIL:' + e.message);} </script>
Attachments
Patch
(1.94 KB, patch)
2011-10-13 16:18 PDT
,
Adam Barth
no flags
Details
Formatted Diff
Diff
Patch
(3.17 KB, patch)
2011-10-13 16:20 PDT
,
Adam Barth
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2011-10-13 16:18:43 PDT
Created
attachment 110922
[details]
Patch
Adam Barth
Comment 2
2011-10-13 16:20:02 PDT
Created
attachment 110924
[details]
Patch
WebKit Review Bot
Comment 3
2011-10-13 22:11:40 PDT
Comment on
attachment 110924
[details]
Patch Clearing flags on attachment: 110924 Committed
r97441
: <
http://trac.webkit.org/changeset/97441
>
WebKit Review Bot
Comment 4
2011-10-13 22:11:44 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug