Spelling error in v8WebSocket::constructorCallback error https://bugs.webkit.org/show_bug.cgi?id=63943

Reviewed by Kent Tamura.

Source/WebCore:

Fix typo.

* bindings/v8/custom/V8WebSocketCustom.cpp:
(WebCore::V8WebSocket::constructorCallback):

LayoutTests:

* platform/chromium/fast/dom/call-a-constructor-as-a-function-expected.txt:


Canonical link: https://commits.webkit.org/86170@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97441 268f45cc-cd09-0410-ab3c-d52691b4dbfc