Source/WebCore/bindings/v8/custom/V8WebSocketCustom.cpp
@@ -56,7 +56,7 @@ v8::Handle<v8::Value> V8WebSocket::constructorCallback(const v8::Arguments& args
     INC_STATS("DOM.WebSocket.Constructor");
 
     if (!args.IsConstructCall())
-        return throwError("DOM object custructor cannot be called as a function.", V8Proxy::TypeError);
+        return throwError("DOM object constructor cannot be called as a function.", V8Proxy::TypeError);
     if (args.Length() == 0)
         return throwError("Not enough arguments", V8Proxy::SyntaxError);
 
